# r13

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  meson.build
LICENSES/: LICENSE.miniaudio
assets/: CMakeLists.txt  circle.frag  circle.vert  default.vert  line.frag  meson.build  rect.frag  rect.vert  sprite.frag  sprite.vert  text.frag  text.vert
cmake/: generate_package.cmake  r13.pc.in  r13Config.cmake.in
docs/html/: annotated.html  annotated_dup.js  class_r13-members.html  class_r13.html  class_r13.js  classes.html  dir_98164e8ca85b18161dc5b2bd65d5edba.html  dir_98164e8ca85b18161dc5b2bd65d5edba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_type.html  index.html  keys_8h.html  keys_8h.js  keys_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  r13_8h.html  r13_8h.js  r13_8h_source.html  struct_color-members.html  struct_color.html  struct_color.js  struct_font-members.html  struct_font.html  struct_font.js  struct_i_vec2-members.html  struct_i_vec2.html  struct_i_vec2.js  struct_line-members.html  struct_line.html  (+18 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  (+6 more)
docs/latex/: annotated.tex  class_r13.tex  dir_98164e8ca85b18161dc5b2bd65d5edba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  keys_8h.tex  keys_8h_source.tex  r13_8h.tex  r13_8h_source.tex  refman.tex  struct_color.tex  struct_font.tex  struct_i_vec2.tex  struct_line.tex  struct_rectangle.tex  struct_sprite.tex  struct_vec2.tex  struct_vec3.tex  struct_vec4.tex  structs_8h.tex  structs_8h_source.tex
include/: assets.h  r13.h  renderer.h
include/r13priv/: api.h  classes.h  keys.h  structs.h
lib/: CMakeLists.txt  meson.build
lib/glad/: CMakeLists.txt  meson.build
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.cpp
lib/miniaudio/: CMakeLists.txt  meson.build
lib/stbimg/: CMakeLists.txt
lib/stbtt/: CMakeLists.txt  meson.build
logo/: r13_logo.ai
scripts/: bindump.py
src/: audio_player.cc  circ_rnd.cc  circle_renderer.cc  exports.cc  font.cc  init.cc  input.cc  logic.cc  r13.cc  r13_exports.cc  r13_init.cc  r13_window.cc  r13r.cc  rect_renderer.cc  shader.cc  sprite.cc  square_rnd.cc  text_renderer.cc  text_rnd.cc  window.cc
src/renderers/: circle_renderer.cc  line.cc  line_renderer.cc  polygon.cc  rect.cc  rect_renderer.cc  sprite.cc  text.cc
tests/: CMakeLists.txt  main.cc  meson.build
